07-07-2026 worked on push, cron and fixed mentioned bugs
